--- a/Simon/simon.css
+++ b/Simon/simon.css
@@ -1,22 +1,50 @@
 @CHARSET "UTF-8";
 
 body{
-    background-color: #000;
+    background-color: #222;
     font-family: 'Bangers';
+}
+
+.title{
+    color: #fff;
+    background-color: #800;
+    border: 8px solid #fff;
+    height: 100px;
+    line-height: 100px;
+    font-size: 72px;
+    font-family:'Wallpoet';
+    text-align: center;
+    border-radius: 60px;
+    animation-name: colors;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes colors {
+  0%    {background-color: #900;}
+  25%   {background-color: #090;}
+  50%   {background-color: #b80;}
+  75%   {background-color: #009;}
+  100%  {background-color: #900;}
 }
 
 #score{
     position: absolute;
-    right: 10px;
-    top: 10px;
-    width: 60px;
-    height: 60px;
-    line-height: 60px;
-    border-radius: 12px;
-    background-color: #fff;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 150px;
+    height: 150px;
+    line-height: 150px;
+    background-image: radial-gradient(#fff,#fff,#fff,#aaa,#666,#000);
+    border-radius:50%;
+    border: 2px solid rgba(0,0,0,.5);
     color: #000;
-    font-size: 24px;
+    font-size: 72px;
+    font-family:'Wallpoet';
     text-align: center;
+    box-shadow: 0 0 20px rgba(0, 0, 0, .5);
 }
 
 #overlay{
@@ -38,7 +66,7 @@ body{
     text-align: center;
     border-radius: 30px;
     margin: 20px auto;
-    display: none;
+    opacity: 0;
 }
 
 #start{
@@ -62,28 +90,38 @@ body{
 
 #boxWrapper{
     width: 400px;
+    height:400px;
     font-size: 0;
-    margin: 0 auto;
+    margin: 10px auto;
+    border: 16px solid #000;
+    border-radius: 50%;
+    background-color: #000;
+    position:relative;
 }
 
 .box{
     width: 200px;
     height: 200px;
-    
     display:inline-block;
+    box-sizing: border-box;
+    border: 8px solid rgba(0,0,0,.2);
+    position:relative;
 }
 
 div[box='1']{
     background-color: #900;
+    border-top-left-radius: 100%;
+    /*border-bottom-right-radius: 50%;*/
 }
 
 div[box='1'].selected{
-    background-color: #f00;
 }
 
 
 div[box='2']{
     background-color: #090;
+    border-top-right-radius: 100%;
+    /*border-bottom-left-radius: 50%;*/
 }
 
 div[box='2'].selected{
@@ -92,6 +130,8 @@ div[box='2'].selected{
 
 div[box='3']{
     background-color: #b80;
+    border-bottom-left-radius: 100%;
+    /*border-top-right-radius: 50%;*/
 }
 
 div[box='3'].selected{
@@ -100,6 +140,8 @@ div[box='3'].selected{
 
 div[box='4']{
     background-color: #009;
+    border-bottom-right-radius: 100%;
+    /*border-top-left-radius: 50%;*/
 }
 
 div[box='4'].selected{
