--- a/BoxGame/boxGame.css
+++ b/BoxGame/boxGame.css
@@ -19,7 +19,7 @@ body,html{
     width: 5px;
     height: 5px;
     float:left;
-    background-color: white;
+    background-color: #08c;
     border-radius: 50%;
 }
 
@@ -27,12 +27,12 @@ body,html{
     width: 50px;
     height: 50px;
     float:left;
-    background-color: #300;
+    /*background-color: #300;*/
 }
 
 .line{
     box-sizing: border-box;
-    background-color: #600;
+    background-color: #fff;
     float: left;
     border-radius: 5px;
 }
