--- a/BoxGame/boxGame.css
+++ b/BoxGame/boxGame.css
@@ -3,46 +3,58 @@ body,html{
     height: 100%;
 }
 
+body{
+    background-color: #111;
+}
+
 #gameBoard{
     width: 500px;
     height: 500px;
-    border: 1px dotted #aaa;
-    padding: 10px;
-    background-color: #800;
+    border: 4px solid #2b8031;
+    padding: 20px;
+    background-color: #000;
     position: absolute;
+    border-radius: 10px;
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
 }
 
 .dot{
-    width: 5px;
-    height: 5px;
+    width: 10px;
+    height: 10px;
     float:left;
     background-color: #08c;
     border-radius: 50%;
 }
 
 .box{
-    width: 50px;
-    height: 50px;
+    width: 44px;
+    height: 44px;
     float:left;
     /*background-color: #300;*/
 }
 
 .line{
     box-sizing: border-box;
-    background-color: #fff;
     float: left;
     border-radius: 5px;
+    cursor: pointer;
+    /*background-color: #fff;*/
 }
 
 .hLine{
-    width: 50px;
-    height: 5px;
+    width: 38px;
+    height: 10px;
+    margin: 0px 3px;
 }
 
 .vLine{
-    width: 5px;
-    height: 50px;
+    width: 10px;
+    height: 38px;
+    margin: 3px 0px;
+}
+
+.drawn{
+    background-color: #fff;
 }
