--- a/BoxGame/boxGame.css
+++ b/BoxGame/boxGame.css
@@ -8,17 +8,22 @@ body{
     overflow: hidden;
 }
 
+#gameWrapper{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display:grid;
+    grid-template-columns: auto;
+}
+
 #scoreBoard{
     background-color: #222;
     border-radius: 10px;
-    width: 500px;
+    width: calc(100% - 20px);
     height: 100px;
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
     padding: 10px;
-    display: grid;
+    display: inline-block;
     align-content: center;
     grid-template-columns: auto auto auto;
     grid-gap: 100px;
@@ -37,10 +42,12 @@ body{
 
 #score0{
     color: #228328;
+    float:left;
 }
 
 #score1{
     color: #014470;
+    float: right;
 }
 
 #score0.currTurn{
@@ -57,19 +64,17 @@ body{
 
 #leftOver{
     background-color: #000;
+    position:absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 #gameBoard{
-    width: 442px;
-    height: 496px;
     border: 4px solid #2b8031;
     padding: 20px;
     background-color: #000;
-    position: absolute;
     border-radius: 10px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+    margin:10px;
 }
 
 .dot{
@@ -108,6 +113,12 @@ body{
     width: 10px;
     height: 38px;
     margin: 3px 0px;
+}
+
+#sizeWrapper{
+    text-align: center;
+    color: white;
+    font-family: 'Odibee Sans';
 }
 
 .drawn{
